<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_recycler_card_view_item"
    android:padding="@dimen/layout_padding_recycler_card_view_item"
    app:cardCornerRadius="@dimen/layout_corner_radius_recycler_card_view_item"
    app:cardElevation="@dimen/layout_card_elevation_recycler_card_view_item">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/value_text_view_label_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            android:layout_marginTop="@dimen/material_margin_16dp"
            android:text="@string/value_label_text_view_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_label_text_view_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            android:layout_marginTop="@dimen/material_margin_8dp"
            android:text="@string/description_label_text_view_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_text_view_label_income_item" />

        <TextView
            android:id="@+id/date_label_text_view_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            android:layout_marginTop="@dimen/material_margin_8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/date_label_text_view_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_value_text_view_income_item" />

        <Switch
            android:id="@+id/was_paid_switch_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_16dp"
            android:layout_marginEnd="@dimen/material_margin_16dp"
            android:checked="false"
            android:clickable="false"
            android:text="@string/was_received_label_text_view_income_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attach_icon_image_view_income_item" />

        <TextView
            android:id="@+id/value_text_view_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            android:text="@string/mock_value_text_view_item"
            app:layout_constraintBottom_toBottomOf="@id/value_text_view_label_income_item"
            app:layout_constraintStart_toEndOf="@id/value_text_view_label_income_item"
            app:layout_constraintTop_toTopOf="@id/value_text_view_label_income_item" />

        <TextView
            android:id="@+id/description_value_text_view_income_item"
            android:layout_width="@dimen/match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            android:layout_marginEnd="@dimen/material_margin_16dp"
            android:maxLength="120"
            app:layout_constraintBottom_toBottomOf="@id/description_label_text_view_income_item"
            app:layout_constraintEnd_toStartOf="@+id/was_paid_switch_income_item"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/description_label_text_view_income_item"
            app:layout_constraintTop_toTopOf="@id/description_label_text_view_income_item"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/mock_description_text_view_item" />

        <TextView
            android:id="@+id/date_value_text_view_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            tools:text="@string/mock_date_text_view_item"
            app:layout_constraintBottom_toBottomOf="@id/date_label_text_view_income_item"
            app:layout_constraintStart_toEndOf="@id/date_label_text_view_income_item"
            app:layout_constraintTop_toTopOf="@id/date_label_text_view_income_item" />

        <ImageView
            android:id="@+id/attach_icon_image_view_income_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16dp"
            android:layout_marginTop="@dimen/material_margin_16dp"
            android:layout_marginEnd="@dimen/material_margin_16dp"
            android:src="@drawable/ic_attach"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/was_paid_switch_income_item"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/attached_image_button_content_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>